# tv-app-poc-rust

./: .editorconfig  .gitignore  README.md  package.json  webpack.config.js
app/: .project  App.svelte  config.xml  emss_loader.js  index.html  store.js
app/components/LeftMenu/: Arrow.svelte  LeftMenu.svelte
app/components/Modal/: Modal.svelte
app/components/VideoContainer/: Card.svelte  ListVideo.svelte  VideoContainer.svelte
app/css/: main.css
app/wasm_modules/wasm_player/: .cproject  .project
app/wasm_modules/wasm_player/src/: emss_sdf_sample.cc  sample_data.cc  sample_data.h
app/wasm_modules/wasm_rust/: Cargo.toml  README.md
app/wasm_modules/wasm_rust/src/: lib.rs
app/wasm_modules/wasm_rust/src/videos/: mod.rs  model.rs
rustandroid/: settings.gradle
rustandroid/app/: build.gradle
rustandroid/app/src/androidTest/java/com/androidrust/: ExampleInstrumentedTest.kt
rustandroid/app/src/main/: AndroidManifest.xml
rustandroid/app/src/main/java/com/androidrust/: MainActivity.kt  RustGreetings.kt
rustandroid/app/src/main/res/layout/: activity_main.xml  items_list.xml
rustandroid/app/src/main/res/values/: strings.xml  themes.xml
rustandroid/app/src/main/res/values-night/: themes.xml
rustandroid/app/src/test/java/com/androidrust/: ExampleUnitTest.kt
rustandroid/gradle/wrapper/: gradle-wrapper.properties
wasmandroid/: settings.gradle
wasmandroid/app/: build.gradle
wasmandroid/app/src/main/: AndroidManifest.xml
wasmandroid/app/src/main/java/com/example/wasmandroid/: MainActivity.kt
wasmandroid/app/src/main/res/layout/: activity_main.xml
wasmandroid/app/src/main/res/values/: strings.xml  themes.xml
wasmandroid/gradle/wrapper/: gradle-wrapper.properties
